fix: remove whitespace

--- a/src/assets/css/markdown-level-up.css
+++ b/src/assets/css/markdown-level-up.css
@@ -689,6 +689,7 @@
 
   .code-viewer code[class*="language-"]::before,
   .code-viewer code[class*="language-"]::after {
+    content: none !important;
     display: none !important;
   }
 }
